<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_navigation"
    app:startDestination="@+id/bottom_navigation_list_view">

    <fragment
        android:id="@+id/bottom_navigation_list_view"
        android:name="com.benlinux.realestatemanager.ui.fragments.ListFragment"
        android:label="@string/list_fragment_label"
        tools:layout="@layout/fragment_list_view" />

    <fragment
        android:id="@+id/bottom_navigation_map_view"
        android:name="com.benlinux.realestatemanager.ui.fragments.MapFragment"
        android:label="@string/map_fragment_label"
        tools:layout="@layout/fragment_map_view" />


    <fragment
        android:id="@+id/bottom_navigation_add_property"
        android:name="com.benlinux.realestatemanager.ui.fragments.AddPropertyFragment"
        android:label="@string/add_property_fragment_label"
        tools:layout="@layout/fragment_add_property_view" />

</navigation>